# dofi

./: Cargo.toml  README.md  justfile
src/: main.rs
