[package]
name = "dofi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.1"
env_logger = "0.11.2"
log = "0.4.20"
miette = { version = "7.1.0", features = ["fancy"] }
thiserror = "1.0.57"
walkdir = "2.4.0"

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1
strip = true
