[package]
name = "dofi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.7"
env_logger = "0.11.3"
ignore = "0.4.22"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.61"

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1
strip = true
